--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -38,5 +38,9 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   my_new_project:
     # Applies to all files under models/example/
-    example:
+    stg_tables:
       +materialized: table
+    views:
+      +materialized: view
+      
+    
